# workspace-agent

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0d7731112bb6_create_attachments_table.py  0f73f3400248_create_actions_table.py  0fe5924e0d64_add_category_column.py  9a8079b2e798_add_updated_at_column.py  cfc367837e38_add_status_markdown_columns.py  eb1d6153fa97_initial_revision_create_tables.py
app/cli/: approve_pending.py
app/core/: config.py  database.py  google_auth.py  logging_config.py  models.py  profile.py  schemas.py
app/pipeline/: orchestrator.py
app/pipeline/classification/: agent.py  classify.py
app/pipeline/execution/: _common.py  approve.py  execute.py
app/pipeline/execution/handlers/: base.py  calendar.py  draft_handler.py  email.py  email_handler.py  spreadsheet_handler.py
app/pipeline/ingestion/: email_parser.py  gmail_api.py  ingest.py
app/pipeline/planning/: plan.py
app/pipeline/planning/extractors/: base.py  calendar_event.py  draft_reply.py  ignore.py  job_apply.py  reply_details.py
app/utils/: formatter.py  html_to_markdown.py
