[project]
name = "workspace-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "html2text>=2025.4.15",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.10",
    "python-json-logger>=4.1.0",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
approve = "app.cli.approve_pending:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]
